--- a/app/src/main/res/drawable/rounded_rectangle_button.xml
+++ b/app/src/main/res/drawable/rounded_rectangle_button.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="50dp"/>
-    <solid android:color="@color/primaryColor" />
+    <solid android:color="#55DD00" />
     <padding
         android:bottom="10dp"
         android:left="25dp"
