--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,16 +2,25 @@
     <!-- Base application theme. -->
     <style name="Theme.Score" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/primaryColor</item>
+        <item name="colorPrimaryVariant">@color/primaryLightColor</item>
+        <item name="colorOnPrimary">@color/btn_bg_change</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/btn_gradient_strtcolor</item>
+        <item name="colorSecondaryVariant">@color/btn_gradient_endcolor</item>
+        <item name="colorOnSecondary">@color/btn_gr_end</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="actionMenuTextColor">@color/primaryDarkColor</item>
+        <item name="android:actionMenuTextColor">@color/primaryDarkColor</item>
         <!-- Customize your theme here. -->
+
+        <item name="android:textViewStyle">
+            @style/stTextViewLabel
+        </item>
+        <item name="android:buttonStyle">@style/stButton</item>
+
+
     </style>
     <style name="stTextViewLabel" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">15dp</item>
